--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,10 @@ h1 {
   margin-bottom: 20px;
 }
 
+.cards__first-flex-item {
+  order: -1;
+}
+
 /* grid fyrir efni, setja þarf upp í html */
 
 .grid__row {
@@ -66,10 +70,15 @@ h1 {
 
 .cards__row {
   display: flex;
+  flex-wrap: wrap;
+  margin-left: -10px;
+  margin-right: -10px;
 }
 
 .cards__col {
-  display: flex
+  width: 100%;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 /* TODO útfæra grid fyrir cards */
@@ -135,6 +144,7 @@ h1 {
 }
 
 @media (max-width: 699px) {
+
   .card {
     max-width: none;
     max-height: none;
@@ -159,5 +169,12 @@ h1 {
 }
 
 @media (min-width: 700px) {
-
+  .cards__col {
+    width: 50%;
+  }
+  .cards {
+    margin-bottom: 40px;
+  }
 }
+
+@media
