--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/* Gefin gildi */
 * {
   margin: 0;
   padding: 0;
@@ -20,13 +21,13 @@ main {
   padding-right: 20px;
 }
 
-/* TODO taka ætti padding af main þegar komið er fyrir ofan hámarksbreidd */
-
+/* Titill */
 h1 {
   text-align: center;
   margin: 20px 0;
 }
 
+/* grid viðföng */
 .grid__text {
   margin-bottom: 20px;
 }
@@ -40,17 +41,9 @@ h1 {
   margin-bottom: 20px;
 }
 
-.cards__first-flex-item {
-  order: -1;
-}
-
 .grid__last-item {
   order: 2;
 }
-
-
-
-/* grid fyrir efni, setja þarf upp í html */
 
 .grid__row {
   display: flex;
@@ -65,12 +58,10 @@ h1 {
   padding-left: 10px;
 }
 
-
-/* TODO setja upp grid fyrir >= 1000px */
-
-/* TODO koma mynd fyrir á öðrum stað í < 1000px */
-
-/* grid fyrir cards */
+/* cards viðföng */
+.cards__first-flex-item {
+  order: -1;
+}
 
 .cards {
   justify-content: space-around;
@@ -78,6 +69,7 @@ h1 {
 
 .cards__row {
   display: flex;
+  align-items: stretch;
   flex-wrap: wrap;
   margin-left: -10px;
   margin-right: -10px;
@@ -87,19 +79,18 @@ h1 {
   width: 100%;
   padding-left: 10px;
   padding-right: 10px;
+  margin-bottom: 20px;
 }
 
-/* TODO útfæra grid fyrir cards */
-
-
+/* frumstilling card og card viðföng */
 .card {
   display: flex;
   flex-direction: column;
-  align-content: space-between;
 
   margin-bottom: 10px;
   padding: 10px;
   width: 100%;
+  height: 100%;
   max-width: 470px;
   max-height: 320px;
   overflow: auto;
@@ -152,13 +143,13 @@ h1 {
   margin-right: 10px;
 }
 
+/* fyrir viðmót minna en 700px á breidd */
 @media (max-width: 699px) {
 
   .card {
     max-width: none;
     max-height: none;
 
-    background-color: #fff;
     border-radius: 0px;
     border: none;
     border-bottom: 2px solid #aaa;
@@ -177,22 +168,22 @@ h1 {
   }
 }
 
+/* fyrir viðmót stærra en 699px og minna en 1000px á breidd */
 @media (min-width: 700px) {
   .card {
     max-width: none;
-    /* flex-grow: 1; */
-    /* align-self: stretch; */
   }
   
   .cards__col {
     width: 50%;
-    align-content: stretch;
   }
+
   .cards {
     margin-bottom: 40px;
   }
 }
 
+/* fyrir viðmót stærra en 999px og minna en 1490px á breidd */
 @media (min-width: 1000px) {
   .grid__col {
     width: 50%;
@@ -212,3 +203,11 @@ h1 {
     order: 0;
   }
 }
+
+/* fyrir viðmót stærri en  1489px á breidd */
+@media (min-width: 1490px) {
+  main {
+    padding: none;
+  }
+}
+
